Corrigido a exibição do termo de garantia da OS e organizado os campos de assinatura

--- a/assets/css/imprimir.css
+++ b/assets/css/imprimir.css
@@ -211,6 +211,10 @@ footer .assinaturas span {
   margin-top: 55px;
 }
 
+footer .assinaturas div {
+  text-align: justify;
+  margin-top: 0px;
+}
 #anexos {
   display: none;
   page-break-before: always;
